<resources>
    <string name="app_name">Clothify</string>
    <string name="name">Nombre de usuario</string>
    <string name="required_field">Campo requerido</string>
    <string name="email">Correo Electrónico</string>
    <string name="password">Contraseña</string>
    <string name="rep_password">Repetir contraseña</string>
    <string name="register">Registrar</string>
    <string name="entrar">Iniciar sesión</string>
    <string name="forget">Olvidaste tu contraseña?</string>
    <string name="reg">No tienes cuenta aún?</string>
    <string name="reg2">Regístrate</string>
    <string name="dialog_one_style_title">Registro Exitoso</string>
    <string name="dialog_one_style_message">Ahora puede iniciar sesión con tus credenciales</string>
    <string name="dialog_one_style_positive_btn">Aceptar</string>
    <string name="recovery_title">Recuperar contraseña</string>
    <string name="recovery_text">Ingresa tu correo electrónico y te llegará un link para restablecer tu contraseña</string>
    <string name="send">Enviar</string>
    <string name="dialog_one_style_title_recovery">Correo electrónico enviado</string>
    <string name="dialog_one_style_message_recovery">Revisa tu correo electrónico y abre el mensaje que te hemos enviado, da click en el link y digita tu nueva contraseña</string>
    <string name="dialog_one_style_positive_btn_recovery">Aceptar</string>


    <string name="home">Home</string>
    <string name="carrito">Carrito</string>
    <string name="perfil">Yo</string>
    <string name="damas">Damas</string>
    <string name="caballeros">Caballeros</string>
    <string name="ninos">Niños</string>
    <string name="comprar">Comprar</string>
    <string name="anadir">Añadir</string>
    <string name="devolver">Anterior</string>
    <string name="navigation_drawer_open">Abrir</string>
    <string name="navigation_drawer_close">Cerrar</string>
    <string name="acerca">Acerca de</string>
    <string name="cerrar">Cerrar Sesión</string>
    <string name="title_activity_bottom_navigation">BottomNavigationActivity</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="title_activity_tabbed">activity_tabbed</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name_header">Clothify</string>
    <string name="sign_out">Cerrar sesión</string>
    <string name="example_name">Goku</string>
    <string name="email_example">goku@gmaill.com</string>
    <string name="item_name">Artículo</string>
    <string name="precio">precio</string>
    <string name="precio_total">precio total</string>
    <string name="cantidad">Cantidad</string>
    <string name="quantity">Cantidad</string>
    <string name="compra">Comprar</string>
    <string name="eliminar">eliminar</string>

</resources>