<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph.xml"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.santiagotorres.clothify.ui.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" >
    </fragment>

    <fragment
        android:id="@+id/perfilFragment"
        android:name="com.santiagotorres.clothify.ui.perfil.PerfilFragment"
        android:label="@string/perfil"
        tools:layout="@layout/fragment_perfil" >
    </fragment>
    <fragment
        android:id="@+id/carritoFragment"
        android:name="com.santiagotorres.clothify.ui.carrito.CarritoFragment"
        android:label="@string/carrito" />
</navigation>